Add discuss and publish endpoints
